--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.0",
     "browser-router": "^0.2.0",
+    "date-fns": "^2.28.0",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.1.0",
+    "react-big-calendar": "^0.40.1",
     "react-cookies": "^0.1.1",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
@@ -20,6 +23,7 @@
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
