--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "nodemon index.js"
+    "backend": "nodemon index.js"
   },
   "author": "hyun",
   "license": "ISC",
