--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,17 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "socket.io": "^4.5.1",
     "yarn": "^1.22.18"
   },
   "name": "server",
