--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "express-fileupload": "^1.4.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
@@ -13,6 +14,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "socket.io": "^4.5.1",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.18"
   },
   "name": "server",
