--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^6.3.1",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
